[package]
name = "prayerbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
reqwest = { version = "0.11.23", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
serde_json = "1.0.111"

[[bin]]
name = "prayerbar"
path = "./src/main.rs"
